--- a/Italian/main/MediaProvider.apk/res/values-it/strings.xml
+++ b/Italian/main/MediaProvider.apk/res/values-it/strings.xml
@@ -7,7 +7,7 @@
     <string name="ringtone_default">Suoneria di default</string>
     <string name="notification_sound_default">Suoneria notifiche di default</string>
     <string name="alarm_sound_default">Suoneria allarme di default</string>
-    <string name="root_images">Immaggini</string>
+    <string name="root_images">Immagini</string>
     <string name="root_videos">Video</string>
     <string name="root_audio">Audio</string>
 </resources>
