--- a/Italian/main/Mms.apk/res/values-it/strings.xml
+++ b/Italian/main/Mms.apk/res/values-it/strings.xml
@@ -466,7 +466,7 @@
     <string name="toast_feedback_max">Possono essere inviati solo 3 feedback al giorno</string>
     <string name="toast_description_required">Il feedback deve essere inviato</string>
     <string name="pref_key_mx_feedback">Invia feedback</string>
-    <string name="pref_summary_mx_feedback">"Aiutaci a migliorare MIUI!Segnala bug ed invia feedback direttamente a Xiaomi."</string>
+    <string name="pref_summary_mx_feedback">"Aiutaci a migliorare MIUI! Segnala bug ed invia feedback direttamente a Xiaomi."</string>
     <string name="feedback_description_hint">Inserisci qui il tuo feedback</string>
     <string name="feedback_submit">Invia</string>
     <string name="action_firewall_setting">Blocklist</string>
@@ -483,7 +483,7 @@
     <string name="quick_reply">Rispondi</string>
     <string name="msglist_continue_to_pull_for_more">Trascina giù per vedere altro</string>
     <string name="msglist_release_to_more">Rilascia per vedere altro</string>
-    <string name="msglist_more_refreshing">Aggiornamento…</string>
+    <string name="msglist_more_refreshing">Aggiornamento\u2026</string>
     <string name="msglist_no_more_to_refresh">Già aggiornato</string>
     <string name="app_name">Gestione dispositivo</string>
     <string name="manage_permission_app_label">Permessi gestione dispositivo</string>
