--- a/Italian/main/Calendar.apk/res/values-it/strings.xml
+++ b/Italian/main/Calendar.apk/res/values-it/strings.xml
@@ -129,7 +129,7 @@
     <string name="search_history_cleared">Cronologia cancellata</string>
     <string name="preferences_alerts_title">Notifiche</string>
     <string name="preferences_alerts_vibrateWhen_title">Vibrazione</string>
-    <string name="preferences_alerts_ringtone_title">Scegli suoneria</string>
+    <string name="preferences_alerts_ringtone_title">Suoneria</string>
     <string name="preferences_alerts_popup_title">Notifica pop-up</string>
     <string name="preferences_default_reminder_title">Promemoria predefinito</string>
     <string name="preferences_default_reminder_dialog">Promemoria predefinito</string>
