--- a/Italian/main/Browser.apk/res/values-it/strings.xml
+++ b/Italian/main/Browser.apk/res/values-it/strings.xml
@@ -362,7 +362,7 @@ Sei sicuro di voler uscire da questa pagina?"</string>
     <string name="pref_category_title_version">Versione</string>
     <string name="js_disable_confirm_title">Disattivare JavaScript?</string>
     <string name="js_disable_confirm_message">Disattivando JavaScript alcuni siti web potrebbero non essere visualizzati correttamente</string>
-    <string name="action_menu_text_bookmark">Aggiungo segnalibro</string>
+    <string name="action_menu_text_bookmark">Aggiungi ai segnalibri</string>
     <string name="action_menu_text_share">Condividi</string>
     <string name="action_menu_text_history">Segnalibri/Cronologia</string>
     <string name="action_menu_text_nightmode">Modalità Notte</string>
