--- a/Italian/main/AntiSpam.apk/res/values-it/strings.xml
+++ b/Italian/main/AntiSpam.apk/res/values-it/strings.xml
@@ -72,6 +72,10 @@
     <string name="toast_keyword_blank">Parola chiave vuota</string>
     <string name="toast_keyword_exist">Parola chiave: %s già esistente</string>
     <string name="toast_keyword_invalid">Parola non valida</string>
+    <string name="dlg_antispam_mode_delete_title">Elimina regole personalizzate</string>
+    <string name="dlg_antispam_mode_delete_message">Non puoi ripristinare le regole personalizzate per la Lista Blocco dopo la loro eliminazione.</string>
+    <string name="dlg_antispam_using_mode_delete_message">Eliminare il porfilo della Lista Blocco in uso e passare al profilo predefinito? Questa azione è irreversibile.</string>
+    <string name="dlg_antispam_using_mode_international_delete_message">Eliminare il porfilo della Lista Blocco in uso e passare al profilo predefinito? Questa azione è irreversibile.</string>
     <string name="menu_clear_all_sms">Rimuovere tutti i messaggi bloccati</string>
     <string name="menu_clear_all_call">Rimuovere tutte le chiamate bloccate</string>
     <string name="menu_clear_current_sms">Rimuovere tutti i messaggi bloccati da questo numero</string>
@@ -257,6 +261,7 @@ Aggiungi più parole separandole con la virgola."</string>
     <string name="info_unantispam_phone_sms">Consenti messaggi e chiamate</string>
     <string name="st_antispam_delete">Elimina</string>
     <string name="baidu_thanks">Powered by Baidu</string>
+    <string name="info_antispam_current_mode">%s</string>
     <string name="note_list_none">Nessuna lista da modificare</string>
     <string name="note_sms_none">Nessun messaggio da modificare</string>
     <string name="note_call_none">Nessun dato da modificare</string>
