--- a/Italian/main/Email.apk/res/values-it/strings.xml
+++ b/Italian/main/Email.apk/res/values-it/strings.xml
@@ -106,6 +106,8 @@
 (%s)"</string>
     <string name="account_setup_failed_dlg_edit_details_action">Modifica dettagli</string>
     <string name="account_setup_failed_dlg_server_message">Impossibile connettersi al server.</string>
+    <string name="account_setup_failed_dlg_server_message_fmt">"Impossibile connettersi al server.
+(%s)"</string>
     <string name="account_setup_failed_dlg_title">Impossibile completare</string>
     <string name="account_setup_failed_ioerror">Impossibile stabilire la connessione al server.</string>
     <string name="account_setup_failed_protocol_unsupported">"Hai digitato l'indirizzo di un server sbagliato o il server richiede una versione di protocollo non supportata da Email."</string>
@@ -785,6 +787,7 @@ CC: %4$s
     <string name="trigger_refresh_char">u</string>
     <string name="trigger_save_char">s</string>
     <string name="trigger_y_char">y</string>
+    <string name="tryrefreshing">Aggiornamento\u2026</string>
     <string name="turn_auto_sync_on_dialog_body">Tutte le modifiche apportate ad applicazioni ed account, non solo Gmail, verranno sincronizzate tra web, i tuoi altri dispositivi ed il tuo %1$s.</string>
     <string name="turn_auto_sync_on_dialog_confirm_btn">Attiva</string>
     <string name="turn_auto_sync_on_dialog_title">Attivare sincro. automatica?</string>
