--- a/Italian/main/XiaomiServiceFramework.apk/res/values-it/strings.xml
+++ b/Italian/main/XiaomiServiceFramework.apk/res/values-it/strings.xml
@@ -2,6 +2,9 @@
 <resources>
     <string name="app_name">Servizi Xiaomi</string>
     <string name="xmsf_activate_info">Attiva informazioni XMSF</string>
+    <string name="error_device_id_title">Impossibile rilevare codice IMEI</string>
+    <string name="error_device_id_message">Alcune funzioni e servizi cloud non saranno utilizzabili</string>
+    <string name="accept">OK</string>
     <string name="activate_phone_failed_notif_title">Impossibile attivare SIM</string>
     <string name="activate_phone_failed_notif_title_msim">Impossibile avviare Mi Cloud per la SIM %s</string>
     <string name="activate_status_title_activating">Attivazione SIM, attendere prego…</string>
@@ -37,6 +40,7 @@
     <string name="activate_status_desc_getting_sim_info">Ottieni informazioni scheda SIM</string>
     <string name="activate_status_desc_getting_sim_info_fail">Non puoi ottenere le informazioni della scheda SIM</string>
     <string name="sim_unactivated_title">La tua scheda SIM non è attiva</string>
+    <string name="activate">Attiva</string>
     <string name="activate_popup_title_manual">Attivazione scheda SIM</string>
     <string name="activate_popup_desc_sim_card">"Verrà inviato un SMS per attivare la tua SIM, in modo da poter attivare funzionalità come %s (costi dipendenti dall'operatore)"</string>
     <string name="activate_popup_desc_intl_sim_card">"Verrà inviato un SMS internazionale per attivare la tua SIM in modo da abilitare funzionalità come %s (costi dipendenti dall'operatore)"</string>
@@ -45,12 +49,12 @@
     <string name="activate_popup_desc_2_intl_sim_cards">"2 SMS internazionali verranno inviati per attivare la tua SIM in modo da abilitare funzionalità come %s (costi dipendenti dall'operatore)"</string>
     <string name="activate_popup_desc_sim_card_downlink">Prego inserire il numero della tua SIM, per abilitare funzionalità come %s</string>
     <string name="activate_popup_title_new_sim_card">Attivazione nuova  SIM</string>
-    <string name="activate_popup_desc_new_sim_card">"La tua SIM è cambiata. Verrà inviato un SMS per attivare la nuova SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
-    <string name="activate_popup_desc_new_intl_sim_card">"La tua SIM è cambiata. Verrà inviato un SMS per attivare la nuova SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
-    <string name="activate_popup_desc_new_mixed_sim_cards">"Le tue SIM sono cambiate. Verranno inviati un SMS normale e un SMS internazionale per attivare le 2 nuove SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
-    <string name="activate_popup_desc_new_2_sim_cards">"Le tue SIM sono cambiate. Verranno inviati due SMS per attivare le 2 nuove SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
-    <string name="activate_popup_desc_new_2_intl_sim_cards">"Le tue SIM sono cambiate. Verranno inviati due SMS internazionali per attivare le 2 SIM in modo da abilitare feature come %s (costi dipendenti dall'operatore)"</string>
-    <string name="activate_popup_desc_new_sim_card_downlink">La tua SIM è cambiata. Prego inserire il numero della tua SIM, in modo da abilitare feature come %s</string>
+    <string name="activate_popup_desc_new_sim_card">"La tua SIM è cambiata. Verrà inviato un SMS per attivare la nuova SIM in modo da abilitare funzioni come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_new_intl_sim_card">"La tua SIM è cambiata. Verrà inviato un SMS per attivare la nuova SIM in modo da abilitare funzioni come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_new_mixed_sim_cards">"Le tue SIM sono cambiate. Verranno inviati un SMS normale e un SMS internazionale per attivare le 2 nuove SIM in modo da abilitare funzioni come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_new_2_sim_cards">"Le tue SIM sono cambiate. Verranno inviati due SMS per attivare le 2 nuove SIM in modo da abilitare funzioni come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_new_2_intl_sim_cards">"Le tue SIM sono cambiate. Verranno inviati due SMS internazionali per attivare le 2 SIM in modo da abilitare funzioni come %s (costi dipendenti dall'operatore)"</string>
+    <string name="activate_popup_desc_new_sim_card_downlink">La tua SIM è cambiata. Prego inserire il numero della tua SIM, in modo da abilitare funzioni come %s</string>
     <string name="activate_popup_title_register_account">Registra account</string>
     <string name="activate_popup_desc_register_account">Verrà inviato un SMS per registrare il tuo account Xiaomi</string>
     <string name="activate_popup_desc_register_account_intl">Verrà inviato un SMS internazionale per registrare il tuo account Xiaomi</string>
